tests/semantica/valid/asignacion/test1.ctds
program
	{
		integer x = 0;

		void main() {
			x = 2;
		}
	}