tests/semantica/invalid/main/test1.ctds
program 
	{
        integer x = 0;
    }